FIx horizontal scroll in menus

--- a/style2.css
+++ b/style2.css
@@ -104,14 +104,9 @@ li{
     font-size: 2.5vw;
     color: #FFFFFF;
     margin-top: 3vh;
-    width: 4vh;
-    height: 4vh;
-    text-align: center;
-    display: block;
 }
 
 .menu-content{
-    top: 13vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -570,6 +565,19 @@ body.light {
     .fa-times {
         font-size: 3vh;
         margin-top: 1vh;
+        width: 4vh;
+        height: 4vh;
+        text-align: center;
+        display: block;
+    }
+
+    .menu-content{
+        top: 13vh;
+    }
+
+    .menu-content li{
+        margin: 2vh;
+        font-size: 4vh;
     }
 
     .terminal {
